starlark-rust/starlark/src/typing/golden/calls.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib tests
# ```

Code:
def f(y): pass

# Extra parameter.
f(1, 2)

# Not enough parameters.
f()

Error:
error: Too many positional arguments
 --> filename:5:6
  |
5 | f(1, 2)
  |      ^
  |

Error:
error: Missing required parameter `y`
 --> filename:8:1
  |
8 | f()
  | ^^^
  |
